@@ -3,6 +3,7 @@ v1.0.4
                 Features:
                     - Added support for COMMENTS ON.
                     - Fixed handling of $$ delimiters in SQL routine bodies.
+                    - Fixed changed GENERATED STORED in columns.
 
 2025-12-22      v1.0.3
 
